--- a/UmbBase.Web/Views/ContactForm.cshtml
+++ b/UmbBase.Web/Views/ContactForm.cshtml
@@ -12,8 +12,6 @@
 			</div>	
 		</section>	
 		
-
-
 		<section class="section white-section section-padding-top-bottom">
 		<div class="container">
 		<div class="ten columns">
@@ -25,32 +23,12 @@
 			
 				<div class="clear"></div>
 				
-				<form name="ajax-form" id="ajax-form" action="mail-it.php" method="post">
-					<div class="ten columns">
-						<label for="name"> 
-							<span class="error" id="err-name">please enter name</span>
-						</label>
-						<input name="name" id="name" type="text"   placeholder="Your Name: *"/>
-					</div>
-					<div class="ten columns">
-						<label for="email"> 
-							<span class="error" id="err-email">please enter e-mail</span>
-							<span class="error" id="err-emailvld">e-mail is not a valid format</span>
-						</label>
-						<input name="email" id="email" type="text"  placeholder="E-Mail: *"/>
-					</div><br>
-					<div class="ten columns">
-						<label for="message"></label>
-						<textarea name="message" id="message" placeholder="Tell Us Everything"></textarea>
-					</div>
-					<div class="ten columns">
-						<div id="button-con"><button class="send_message" id="send">submit</button></div>
-					</div>
-					<div class="clear"></div>	
-					<div class="error text-align-center" id="err-form">There was a problem validating the form please check!</div>
-					<div class="error text-align-center" id="err-timedout">The connection to the server timed out!</div>
-					<div class="error" id="err-state"></div>
-				</form>	
+				
+                        <div id="contact-form">
+                            <div id="message"></div>
+                            @Html.Action("SendContactForm", "ContactForm")
+                        </div>
+                    
 				
 				<div class="clear"></div>
 				
