--- a/UmbBase.Web/Views/ContactForm/SendContactForm.cshtml
+++ b/UmbBase.Web/Views/ContactForm/SendContactForm.cshtml
@@ -8,20 +8,32 @@
 }
 
 
-@using (Html.BeginUmbracoForm<ContactFormController>("SendContactForm", FormMethod.Post, new { @class = "", id = "contactform", role = "form" }))
+@using (Html.BeginUmbracoForm<ContactFormController>("SendContactForm", FormMethod.Post, new { @class = "", id = "ContactForm", role = "form" }))
 {
-        @Html.TextBoxFor(m => m.NameLastName, new { placeholder = Common.Translate("ContactForm.NameLastName"), @id = "name",type ="text" })
+    <div class="ten columns">
+        @Html.TextBoxFor(m => m.NameLastName, new { placeholder = Common.Translate("ContactForm.NameLastName"), @id = "name", type = "text" })
+       </div>
+
+    <div class="ten columns">
         @Html.TextBoxFor(m => m.Email, new { placeholder = Common.Translate("ContactForm.Email"), @id = "email", type = "text" })
-    @*<div>
-    @Html.TextBoxFor(m => m.Subject, new {placeholder= Common.Translate("ContactForm.Subject"), @id = "form-control"})
-    </div>*@
+      </div>  
+   
+      @*<div>
+            @Html.TextBoxFor(m => m.Subject, new {placeholder= Common.Translate("ContactForm.Subject"), @id = "form-control"})
+            </div>*@
+
+    <div class="ten columns">
         @Html.TextAreaFor(m => m.Message, new { placeholder = Common.Translate("ContactForm.Message"), @id = "comments" })
-    <div class="col-md-12">
-        @Html.Recaptcha()
-        @Html.ValidationMessage("ReCaptcha")
-    </div>
-           @* <input type="submit" id="submit" value="@Common.Translate("ContactForm.Submit")" data-top-bottom="transform: translateY(-50px);" data-bottom-top="transform: translateY(50px);" />*@
-    <div class="col-md-12">
-        <button type="submit" id="submit" data-top-bottom="transform: translateY(-50px);" data-bottom-top="transform: translateY(50px);"><span>@Common.Translate("ContactForm.Submit")</span></button>
-    </div>
-}
+     </div>
+
+
+        <div class="ten columns">
+            @Html.Recaptcha()
+            @Html.ValidationMessage("ReCaptcha")
+        </div>
+
+        @* <input type="submit" id="submit" value="@Common.Translate("ContactForm.Submit")" data-top-bottom="transform: translateY(-50px);" data-bottom-top="transform: translateY(50px);" />*@
+        <div class="ten columns">
+            <button type="submit" id="submit"><span>@Common.Translate("ContactForm.Submit")</span></button>
+        </div>
+        }
